--- a/src/btc_predict.ipynb
+++ b/src/btc_predict.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9e7087df",
+   "id": "ebf0e0c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "18ac9d1b",
+   "id": "5869dadb",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f9a5391a",
+   "id": "d648f089",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "f779c1cb",
+   "id": "35bbbbb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "4355b156",
+   "id": "ab34bb28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e3bdbfb8",
+   "id": "1efc6462",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "f9c98401",
+   "id": "6e2f6d27",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a076054f",
+   "id": "26e44cbc",
    "metadata": {},
    "source": [
     "### Question 1: How open price look like respectively to volume, number_of_trades"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "c0108dd0",
+   "id": "384ded62",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "960e2e7b",
+   "id": "1532eac3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "06661eeb",
+   "id": "b2d0a06b",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "a552e2a1",
+   "id": "8fe117c4",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "dc70feee",
+   "id": "5ceba046",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "5f7f5871",
+   "id": "ba47daaa",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "f23dca93",
+   "id": "5c80805e",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "07aca70f",
+   "id": "65949b09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "6e968674",
+   "id": "7c600e5a",
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "34d1c6b0",
+   "id": "dd38da40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "16833097",
+   "id": "354e4aad",
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "5bfac266",
+   "id": "c5d9ebae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "bcda7308",
+   "id": "2d3aab9a",
    "metadata": {},
    "outputs": [
     {
@@ -1256,10 +1256,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "0691a565",
+   "execution_count": 1,
+   "id": "b0b85aa0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'spark' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mspark\u001b[49m\u001b[38;5;241m.\u001b[39mstop()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'spark' is not defined"
+     ]
+    }
+   ],
    "source": [
     "spark.stop()"
    ]
@@ -1267,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58af581d",
+   "id": "66be4aec",
    "metadata": {},
    "outputs": [],
    "source": []
