--- a/src/GETAPI.ipynb
+++ b/src/GETAPI.ipynb
@@ -97,20 +97,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "symbols = symbols_info()\n",
+    "# symbols = symbols_info()\n",
     "\n",
-    "data = pandas.concat(\n",
-    "    [Price_info(\n",
-    "        i['symbol'],\n",
-    "        '30m',\n",
-    "        '26/11/2022 00:00:00',\n",
-    "        '14/12/2022 00:00:00',\n",
-    "        1000,\n",
-    "        i['baseAsset'],\n",
-    "        i['quoteAsset']\n",
-    "        ) for _,i in symbols[symbols['status']=='TRADING'].iterrows()\n",
-    "    ],\n",
-    "    ignore_index=True)"
+    "# data = pandas.concat(\n",
+    "#     [Price_info(\n",
+    "#         i['symbol'],\n",
+    "#         '30m',\n",
+    "#         '26/11/2022 00:00:00',\n",
+    "#         '14/12/2022 00:00:00',\n",
+    "#         1000,\n",
+    "#         i['baseAsset'],\n",
+    "#         i['quoteAsset']\n",
+    "#         ) for _,i in symbols[symbols['status']=='TRADING'].iterrows()\n",
+    "#     ],\n",
+    "#     ignore_index=True)"
    ]
   }
  ],
@@ -130,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (tags/v3.9.12:b28265d, Mar 23 2022, 23:52:46) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
