--- a/src/Q_TNT.ipynb
+++ b/src/Q_TNT.ipynb
@@ -592,6 +592,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_data.to_csv(\"token_price.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
