CRY-25 | Hide CMK private key

--- a/src/collect/get_symbols.ipynb
+++ b/src/collect/get_symbols.ipynb
@@ -2,19 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
     "import pandas\n",
-    "import os"
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(\"../../env/app.env\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,23 +36,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = ['symbol', 'price', 'percent_change_7d', 'tags', 'date_added']"
+    "columns = [\n",
+    "    'symbol', # abbreviation của symbol\n",
+    "    'price', # giá hiện tại của symbol theo USD\n",
+    "    'percent_change_7d', # phần trăm thay đổi giá của symbol trong 7 ngày qua\n",
+    "    'tags', # các tag của symbol\n",
+    "    'date_added' # ngày thêm vào coinmarketcap\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "SYMBOLS_LIST_API = 'https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest'\n",
     "\n",
     "headers = {\n",
-    "    'X-CMC_PRO_API_KEY': 'f7d541f8-896c-4695-89ce-c8908db48c5f'\n",
+    "    'X-CMC_PRO_API_KEY': CMK_KEY\n",
     "}\n",
     "\n",
     "params = {\n",
@@ -51,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"../../datastore/symbols.csv\")"
+    "df.to_csv(\"../../datastore/symbols.csv\", index=False)"
    ]
   }
  ],
