--- a/src/collect/get_all_price.ipynb
+++ b/src/collect/get_all_price.ipynb
@@ -117,250 +117,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "symbols.to_csv(\"symbols.csv\")\n",
-    "data.to_csv(\"data.csv\")\n"
+    "symbols.to_csv(\"symbols.csv\", index_col = False)\n",
+    "data.to_csv(\"data.csv\", index_col = False)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "headers = {\n",
-    "    'X-CMC_PRO_API_KEY': 'f7d541f8-896c-4695-89ce-c8908db48c5f'\n",
-    "}\n",
-    "\n",
-    "params = {\n",
-    "    'limit': 5000\n",
-    "}\n",
-    "\n",
-    "raw_symbols = json.loads(requests.get('https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest', headers=headers, params=params).text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_symbol_attr(symbol):\n",
-    "    symbol_name = symbol['symbol']\n",
-    "    price = symbol['quote']['USD']['price']\n",
-    "    percent_change_7d = symbol['quote']['USD']['percent_change_7d']\n",
-    "    tags = \",\".join(symbol['tags'])\n",
-    "    date_added = symbol['date_added']\n",
-    "    return [symbol_name, price, percent_change_7d, tags, date_added]\n",
-    "    \n",
-    "symbols = list(map(get_symbol_attr, raw_symbols['data']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "symbols\n",
-    "\n",
-    "df = pandas.DataFrame(symbols, columns=columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"../datastore/symbols.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>price</th>\n",
-       "      <th>percent_change_7d</th>\n",
-       "      <th>tags</th>\n",
-       "      <th>date_added</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>BTC</td>\n",
-       "      <td>1.684295e+04</td>\n",
-       "      <td>0.790627</td>\n",
-       "      <td>mineable,pow,sha-256,store-of-value,state-chan...</td>\n",
-       "      <td>2013-04-28T00:00:00.000Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ETH</td>\n",
-       "      <td>1.216737e+03</td>\n",
-       "      <td>2.818052</td>\n",
-       "      <td>pos,smart-contracts,ethereum-ecosystem,coinbas...</td>\n",
-       "      <td>2015-08-07T00:00:00.000Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>USDT</td>\n",
-       "      <td>9.999156e-01</td>\n",
-       "      <td>-0.017551</td>\n",
-       "      <td>payments,stablecoin,asset-backed-stablecoin,av...</td>\n",
-       "      <td>2015-02-25T00:00:00.000Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>USDC</td>\n",
-       "      <td>1.000030e+00</td>\n",
-       "      <td>0.011159</td>\n",
-       "      <td>medium-of-exchange,stablecoin,asset-backed-sta...</td>\n",
-       "      <td>2018-10-08T00:00:00.000Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>BNB</td>\n",
-       "      <td>2.429735e+02</td>\n",
-       "      <td>-2.004314</td>\n",
-       "      <td>marketplace,centralized-exchange,payments,smar...</td>\n",
-       "      <td>2017-07-25T00:00:00.000Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4995</th>\n",
-       "      <td>WIS</td>\n",
-       "      <td>1.910165e-02</td>\n",
-       "      <td>26.944880</td>\n",
-       "      <td></td>\n",
-       "      <td>2020-11-17T00:00:00.000Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4996</th>\n",
-       "      <td>BKK</td>\n",
-       "      <td>1.382793e-01</td>\n",
-       "      <td>-1.865411</td>\n",
-       "      <td>centralized-exchange,algorand-ecosystem</td>\n",
-       "      <td>2020-02-12T00:00:00.000Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4997</th>\n",
-       "      <td>ZRO</td>\n",
-       "      <td>4.128775e-06</td>\n",
-       "      <td>8.816128</td>\n",
-       "      <td></td>\n",
-       "      <td>2022-12-23T08:50:45.000Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4998</th>\n",
-       "      <td>EOSBULL</td>\n",
-       "      <td>1.999831e-07</td>\n",
-       "      <td>99.964899</td>\n",
-       "      <td></td>\n",
-       "      <td>2020-04-06T00:00:00.000Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4999</th>\n",
-       "      <td>SANJI</td>\n",
-       "      <td>1.174333e-12</td>\n",
-       "      <td>-9.010389</td>\n",
-       "      <td></td>\n",
-       "      <td>2022-04-17T22:24:42.000Z</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5000 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       symbol         price  percent_change_7d  \\\n",
-       "0         BTC  1.684295e+04           0.790627   \n",
-       "1         ETH  1.216737e+03           2.818052   \n",
-       "2        USDT  9.999156e-01          -0.017551   \n",
-       "3        USDC  1.000030e+00           0.011159   \n",
-       "4         BNB  2.429735e+02          -2.004314   \n",
-       "...       ...           ...                ...   \n",
-       "4995      WIS  1.910165e-02          26.944880   \n",
-       "4996      BKK  1.382793e-01          -1.865411   \n",
-       "4997      ZRO  4.128775e-06           8.816128   \n",
-       "4998  EOSBULL  1.999831e-07          99.964899   \n",
-       "4999    SANJI  1.174333e-12          -9.010389   \n",
-       "\n",
-       "                                                   tags  \\\n",
-       "0     mineable,pow,sha-256,store-of-value,state-chan...   \n",
-       "1     pos,smart-contracts,ethereum-ecosystem,coinbas...   \n",
-       "2     payments,stablecoin,asset-backed-stablecoin,av...   \n",
-       "3     medium-of-exchange,stablecoin,asset-backed-sta...   \n",
-       "4     marketplace,centralized-exchange,payments,smar...   \n",
-       "...                                                 ...   \n",
-       "4995                                                      \n",
-       "4996            centralized-exchange,algorand-ecosystem   \n",
-       "4997                                                      \n",
-       "4998                                                      \n",
-       "4999                                                      \n",
-       "\n",
-       "                    date_added  \n",
-       "0     2013-04-28T00:00:00.000Z  \n",
-       "1     2015-08-07T00:00:00.000Z  \n",
-       "2     2015-02-25T00:00:00.000Z  \n",
-       "3     2018-10-08T00:00:00.000Z  \n",
-       "4     2017-07-25T00:00:00.000Z  \n",
-       "...                        ...  \n",
-       "4995  2020-11-17T00:00:00.000Z  \n",
-       "4996  2020-02-12T00:00:00.000Z  \n",
-       "4997  2022-12-23T08:50:45.000Z  \n",
-       "4998  2020-04-06T00:00:00.000Z  \n",
-       "4999  2022-04-17T22:24:42.000Z  \n",
-       "\n",
-       "[5000 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
