CRY-25 | Fix reading data error

--- a/src/exploring/Q_Data_Exploration.ipynb
+++ b/src/exploring/Q_Data_Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -333,19 +333,19 @@
        "[1229162 rows x 15 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pandas.read_csv('../datastore/data.csv').drop(['Unnamed: 0'], axis=1)\n",
+    "data = pandas.read_csv('../../datastore/data.csv').drop(['Unnamed: 0'], axis=1)\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>symbol</th>\n",
-       "      <th>price (USD)</th>\n",
+       "      <th>price</th>\n",
        "      <th>percent_change_7d</th>\n",
        "      <th>tags</th>\n",
        "      <th>date_added</th>\n",
@@ -380,40 +380,40 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>BTC</td>\n",
-       "      <td>16844.198249</td>\n",
-       "      <td>0.696558</td>\n",
+       "      <td>1.680997e+04</td>\n",
+       "      <td>-0.727332</td>\n",
        "      <td>mineable,pow,sha-256,store-of-value,state-chan...</td>\n",
        "      <td>2013-04-28T00:00:00.000Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ETH</td>\n",
-       "      <td>1216.989252</td>\n",
-       "      <td>2.622548</td>\n",
+       "      <td>1.212247e+03</td>\n",
+       "      <td>-0.525129</td>\n",
        "      <td>pos,smart-contracts,ethereum-ecosystem,coinbas...</td>\n",
        "      <td>2015-08-07T00:00:00.000Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>USDT</td>\n",
-       "      <td>0.999931</td>\n",
-       "      <td>-0.016666</td>\n",
+       "      <td>9.998771e-01</td>\n",
+       "      <td>-0.021367</td>\n",
        "      <td>payments,stablecoin,asset-backed-stablecoin,av...</td>\n",
        "      <td>2015-02-25T00:00:00.000Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>USDC</td>\n",
-       "      <td>1.000064</td>\n",
-       "      <td>0.001485</td>\n",
+       "      <td>1.000078e+00</td>\n",
+       "      <td>0.012010</td>\n",
        "      <td>medium-of-exchange,stablecoin,asset-backed-sta...</td>\n",
        "      <td>2018-10-08T00:00:00.000Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>BNB</td>\n",
-       "      <td>243.065360</td>\n",
-       "      <td>-1.946381</td>\n",
+       "      <td>2.453503e+02</td>\n",
+       "      <td>-2.386593</td>\n",
        "      <td>marketplace,centralized-exchange,payments,smar...</td>\n",
        "      <td>2017-07-25T00:00:00.000Z</td>\n",
        "    </tr>\n",
@@ -427,43 +427,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4995</th>\n",
-       "      <td>ANG</td>\n",
-       "      <td>0.004021</td>\n",
-       "      <td>-5.068953</td>\n",
+       "      <td>KNK</td>\n",
+       "      <td>1.245115e-01</td>\n",
+       "      <td>1.864619</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2020-08-17T00:00:00.000Z</td>\n",
+       "      <td>2022-10-31T07:46:39.000Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4996</th>\n",
-       "      <td>1GOLD</td>\n",
-       "      <td>58.942424</td>\n",
-       "      <td>-13.418432</td>\n",
-       "      <td>store-of-value,stablecoin,asset-backed-stablecoin</td>\n",
-       "      <td>2019-10-13T00:00:00.000Z</td>\n",
+       "      <td>COGE</td>\n",
+       "      <td>2.670313e-08</td>\n",
+       "      <td>-21.094882</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-07-25T00:00:00.000Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4997</th>\n",
-       "      <td>BRIDGE</td>\n",
-       "      <td>0.664191</td>\n",
-       "      <td>-13.905646</td>\n",
-       "      <td>everscale-ecosystem</td>\n",
-       "      <td>2022-04-21T04:34:24.000Z</td>\n",
+       "      <td>NKCLC</td>\n",
+       "      <td>2.942265e+00</td>\n",
+       "      <td>2.940861</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-12-14T03:52:45.000Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4998</th>\n",
-       "      <td>TREAT</td>\n",
-       "      <td>0.008767</td>\n",
-       "      <td>37.560296</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-03-16T00:00:00.000Z</td>\n",
+       "      <td>VISION</td>\n",
+       "      <td>4.504223e-01</td>\n",
+       "      <td>-4.122112</td>\n",
+       "      <td>analytics,fantom-ecosystem</td>\n",
+       "      <td>2020-12-17T00:00:00.000Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4999</th>\n",
-       "      <td>HYPE</td>\n",
-       "      <td>0.001187</td>\n",
-       "      <td>-20.879903</td>\n",
+       "      <td>XDOGE</td>\n",
+       "      <td>3.199012e-07</td>\n",
+       "      <td>-78.438887</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2020-12-29T00:00:00.000Z</td>\n",
+       "      <td>2022-12-14T16:37:05.000Z</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -471,18 +471,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      symbol   price (USD)  percent_change_7d  \\\n",
-       "0        BTC  16844.198249           0.696558   \n",
-       "1        ETH   1216.989252           2.622548   \n",
-       "2       USDT      0.999931          -0.016666   \n",
-       "3       USDC      1.000064           0.001485   \n",
-       "4        BNB    243.065360          -1.946381   \n",
+       "      symbol         price  percent_change_7d  \\\n",
+       "0        BTC  1.680997e+04          -0.727332   \n",
+       "1        ETH  1.212247e+03          -0.525129   \n",
+       "2       USDT  9.998771e-01          -0.021367   \n",
+       "3       USDC  1.000078e+00           0.012010   \n",
+       "4        BNB  2.453503e+02          -2.386593   \n",
        "...      ...           ...                ...   \n",
-       "4995     ANG      0.004021          -5.068953   \n",
-       "4996   1GOLD     58.942424         -13.418432   \n",
-       "4997  BRIDGE      0.664191         -13.905646   \n",
-       "4998   TREAT      0.008767          37.560296   \n",
-       "4999    HYPE      0.001187         -20.879903   \n",
+       "4995     KNK  1.245115e-01           1.864619   \n",
+       "4996    COGE  2.670313e-08         -21.094882   \n",
+       "4997   NKCLC  2.942265e+00           2.940861   \n",
+       "4998  VISION  4.504223e-01          -4.122112   \n",
+       "4999   XDOGE  3.199012e-07         -78.438887   \n",
        "\n",
        "                                                   tags  \\\n",
        "0     mineable,pow,sha-256,store-of-value,state-chan...   \n",
@@ -492,9 +492,9 @@
        "4     marketplace,centralized-exchange,payments,smar...   \n",
        "...                                                 ...   \n",
        "4995                                                NaN   \n",
-       "4996  store-of-value,stablecoin,asset-backed-stablecoin   \n",
-       "4997                                everscale-ecosystem   \n",
-       "4998                                                NaN   \n",
+       "4996                                                NaN   \n",
+       "4997                                                NaN   \n",
+       "4998                         analytics,fantom-ecosystem   \n",
        "4999                                                NaN   \n",
        "\n",
        "                    date_added  \n",
@@ -504,22 +504,22 @@
        "3     2018-10-08T00:00:00.000Z  \n",
        "4     2017-07-25T00:00:00.000Z  \n",
        "...                        ...  \n",
-       "4995  2020-08-17T00:00:00.000Z  \n",
-       "4996  2019-10-13T00:00:00.000Z  \n",
-       "4997  2022-04-21T04:34:24.000Z  \n",
-       "4998  2021-03-16T00:00:00.000Z  \n",
-       "4999  2020-12-29T00:00:00.000Z  \n",
+       "4995  2022-10-31T07:46:39.000Z  \n",
+       "4996  2021-07-25T00:00:00.000Z  \n",
+       "4997  2021-12-14T03:52:45.000Z  \n",
+       "4998  2020-12-17T00:00:00.000Z  \n",
+       "4999  2022-12-14T16:37:05.000Z  \n",
        "\n",
        "[5000 rows x 5 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "symbols = pandas.read_csv('../datastore/symbols.csv').drop(['Unnamed: 0'], axis=1)\n",
+    "symbols = pandas.read_csv('../../datastore/symbols.csv')\n",
     "symbols"
    ]
   },
